--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<title>This is a real website</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+<h1>This is a real website</h1>
 </body>
 </html>
