added 2nd button

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
 <h1>This is a real website</h1>
 <button type="submit">This is a button.</button>
+<button type="">This is a 2nd button</button>
 </body>
 </html>
